# rodos

./: .clang-format  .cproject  .gitignore  .gitlab-ci.yml  .project  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  LICENCE.txt  README-cmake.md  README-directory-struct.txt  README-eclipse.md  README-fast-intro.md  README-how-to-install.md  README-set-tool-chains.md  README.md  TODO.txt  VERSION  default.nix  install-cobc.sh  setenvs.sh  with-cmake.nix
api/: application.h  atomic_64bit.h  atomic_64bit_Nro_1rw.h  atomic_64bit_Nrw_Mrw.h  atomic_generic_1rw_Mrw.h  barrier.h  bit_field.h  checksumes.h  commbuffer.h  debug.h  default-platform-parameter.h  fifo.h  gateway.h  hostinfos.h  initiator.h  interrupt_sync.h  interrupt_sync_64bit.h  listelement.h  macros_bits_bytes.h  misc-rodos-funcs.h  netmsginfo.h  putter.h  receiverNode+receiverNodesBitMap.txt  reserved_application_ids.h  reserved_topic_ids.h  rodos-assert.h  rodos-atomic.h  rodos-debug.h  rodos-errorcodes.h  rodos-semaphore.h  rodos-version.h  rodos.h  rodos_no_using_namespace.h  semaphore.h  stdlib_pico.h  stream-bytesex.h  string_pico.h  subscriber.h  thread.h  timeevent.h  (+4 more)
api/gateway/: gateway.h  linkinterface.h  linkinterfacecan.h  linkinterfaceradio.h  linkinterfaceshm.h  linkinterfaceuart.h  linkinterfaceudp.h  networkmessage.h  (+2 more)
cmake/: cmake_uninstall-all.cmake.in  cmake_uninstall.cmake.in  executable.cmake  install-config.cmake  install-rules.cmake
flyout/: CMakeLists.txt  flyout.cpp
scripts/: quit-if-arch-is-undef.sh  quit-if-arch-is-wrong.sh  quit-if-environment-is-wrong.sh
src/: other-ports.txt
support/test/: CMakeLists.txt  allocableobjects-test.cpp
support/test/distributed-topic-register-test/: top4.cpp  top5.cpp
test-suite/: CMakeLists.txt  README.md  doit-compare.sh  doit-first-run.sh  execute-all.sh  terminate-test.cpp  terminate-test.h  test-collector.sh  test-runner.sh
test-suite/core-fast/: activity-simple.cpp  activity-yield.cpp  bytestreamringbuffer-test.cpp  checksum-test.cpp  commbuffer-test.cpp  commbufftest-struct.cpp  deep-sleep-mode.cpp  fifo-test.cpp  fifotest.cpp  gets-async-minimal.cpp  gets-async.cpp  getsnowait.cpp  getsnowiat.cpp  helloworld-minimalistic.cpp  initiator-with-application.cpp  initiator.cpp  io-mask.cpp  make-errors-asserts.cpp  mw_printf.cpp  own-scheduler.cpp  preemption-and-bussywaiting.cpp  printf-formats.cpp  printfconditional.cpp  resumefromevent.cpp  resumer.cpp  s3p-asynchronous-test.cpp  s3p-synchronous-test.cpp  scanf-sub-test.cpp  semaphore-io.cpp  semaphore-police.cpp  semaphore-scope-protector.cpp  semaphore-using-PROTECT_SCOPE.cpp  semaphore-worm-reenter.cpp  semaphore-worm.cpp  semaphoretest.cpp  snprintf.cpp  spritnf.cpp  syncfifotest.cpp  time.cpp  timeevent-resumer01.cpp  (+9 more)
test-suite/core-slow/: barrier-test.cpp  preemptiontest-and-ceiler.cpp  priotest.cpp  random-test-float.cpp  semaphore-counter.cpp  semaphore-deadlock.cpp
test-suite/embedded-test/: datacollector-requester.cpp  embedded-basic.cpp  embedded-middleware.cpp  embedded-test1.cpp  embedded-test2.cpp  filter.cpp
test-suite/expected-embedded-outputs/: blackboard-publicdata.txt  datacollector-requester.txt  embedded-basic.txt  embedded-middleware.txt  embedded-test1.txt  embedded-test2.txt  filter.txt
test-suite/expected-outputs/: activity-simple.txt  activity-yield.txt  alice-bob-charly.txt  barrier-test.txt  blackboard-publicdata.txt  bytestreamringbuffer-test.txt  checksum-test.txt  commbuffer-test.txt  commbufftest-struct.txt  datacollector-requester.txt  deep-sleep-mode.txt  fifo-test.txt  fifotest.txt  filter.txt  gateway-rec32  gateway-rec64  gateway-recdoubl  gateway-sender  gets-async-minimal.txt  gets-async.txt  getsnowait.txt  getsnowiat.txt  helloworld-minimalistic.txt  initiator-with-application.txt  initiator.txt  io-mask.txt  make-errors-asserts.txt  middleware-simple.txt  mw_printf.txt  own-scheduler.txt  preemption-and-bussywaiting.txt  preemptiontest-and-ceiler.txt  printf-formats.txt  priotest.txt  random-test-float.txt  receiver-commbuffer.txt  receiver-fifo.txt  receiver-putter.txt  receiver-subscriber.txt  resumefromevent.txt  (+25 more)
test-suite/matlib-test/: RPYTests.h  basicMathTests.h  complexTests.h  coordinateFrameTests.h  matlib-test.cpp  matrix3DTests.h  matrix4DTests.h  matrix6DTests.h  quaternionTests.h  rotationTests.h  rotorTests.h  vector3DTests.h  vector4DTests.h
test-suite/middleware-gateway/: demo_topics.cpp  executeit.sh  gateway.cpp  receiver-doubletop.cpp  receiver-int32top.cpp  receiver-int64top.cpp  sender.cpp
test-suite/middleware-tests/: alice-bob-charly.cpp  blackboard-publicdata.cpp  datacollector-requester.cpp  filter.cpp  middleware-simple.cpp  receiver-commbuffer.cpp  receiver-fifo.cpp  receiver-putter.cpp  receiver-subscriber.cpp
tutorials/: CMakeLists.txt
tutorials/20-core/: CMakeLists.txt  README-core.md  application-interface.cpp  barrier-test.cpp  ceiler.cpp  commbufftest-struct.cpp  commbufftest.cpp  compute-hostinfos.cpp  cpuload.cpp  deep-sleep-mode.cpp  error-test.cpp  fifo-multiplereader.cpp  fifotest.cpp  gets-async-minimal.cpp  gets-async.cpp  getsnowait.cpp  getsnowiat.cpp  initiator-with-application.cpp  initiator.cpp  io-mask.cpp  io-mask.h  io-mask.txt  make-errors-asserts.cpp  own-scheduler.cpp  preemption-and-bussywaiting.cpp  preemption-and-busywaiting.cpp  preemptiontest-1.cpp  preemptiontest.cpp  printfconditional.cpp  priotest.cpp  resumefromevent.cpp  resumer.cpp  semaphore-deadlock.cpp  semaphore-io.cpp  semaphore-police.cpp  semaphore-scope-protector.cpp  semaphore-using-PROTECT_SCOPE.cpp  semaphore-worm-reenter.cpp  semaphore-worm.cpp  semaphoretest.cpp  (+19 more)
tutorials/20-core/shared-stack-activity/: executeit.sh
tutorials/20-core/tutorials-with-acceptable-warnings/: CMakeLists.txt  compute-hostinfos.cpp  printf-formats.cpp  stack-checker-autonom.cpp  stack-checker.cpp  utctest.cpp
tutorials/30-communication-and-bbs/80-gateway/uarts-router/src/: CMakeLists.txt  demo_topics.cpp  demo_topics.h  gateway1.cpp  receiver1.cpp  receiver2.cpp  router.cpp  sender.cpp  uart_router.cpp  uart_router.h
(+1259 files in other folders)
