add_rodos_executable(timewaitfor timewaitfor.cpp)
add_rodos_executable(timewaitbeats timewaitbeats.cpp)
add_rodos_executable(timewaitbeats-and-for timewaitfor.cpp timewaitbeats.cpp)
add_rodos_executable(timewaitbeats-shortcut timewaitbeats-shortcut.cpp)
add_rodos_executable(timeevents timeevents.cpp)
add_rodos_executable(timeevents-and-waitfor timeevents.cpp timewaitfor.cpp)
add_rodos_executable(timeevent-resumer01 timeevent-resumer01.cpp)
add_rodos_executable(timeevent-resumer02 timeevent-resumer02.cpp)
add_rodos_executable(timepoints timepoints.cpp)
add_rodos_executable(preemptiontest preemptiontest.cpp)
add_rodos_executable(ceiler ceiler.cpp)
add_rodos_executable(preemption-and-ceiler preemptiontest.cpp ceiler.cpp)
add_rodos_executable(preemption-and-timeevents preemptiontest.cpp timeevents.cpp)
add_rodos_executable(commbufftest commbufftest.cpp)
add_rodos_executable(commbufftest-struct commbufftest-struct.cpp)
add_rodos_executable(fifotest fifotest.cpp)
add_rodos_executable(syncfifotest syncfifotest.cpp)
add_rodos_executable(semaphoretest semaphoretest.cpp)
add_rodos_executable(semaphore-worm semaphore-worm.cpp)
add_rodos_executable(resumefromevent resumefromevent.cpp)
add_rodos_executable(yieldtime yieldtime.cpp)
add_rodos_executable(yieldtime-extra yieldtime-extra.cpp)
add_rodos_executable(yieldtime-and-extra yieldtime.cpp yieldtime-extra.cpp)
# add_rodos_executable()

add_subdirectory(tutorials-with-acceptable-warnings)
